crates/pcb-star-core/tests/snapshots/input__interface_net_template_basic.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "Module.star",
    children: [
        FrozenValue(
            Component {
                name: "R1",
                type: "resistor",
                footprint: "SMD:0805",
                prefix: "U",
                pins: {
                    "1": FrozenValue(
                        "1",
                    ),
                    "2": FrozenValue(
                        "2",
                    ),
                },
                connections: {
                    "1": FrozenValue(
                        Net {
                            name: "PREFIX_MYTEST",
                            id: "<ID>",
                            properties: {
                                "prop": FrozenValue(
                                    StarlarkBool(
                                        true,
                                    ),
                                ),
                                "value": FrozenValue(
                                    "123",
                                ),
                            },
                        },
                    ),
                    "2": FrozenValue(
                        Net {
                            name: "GND",
                            id: "<ID>",
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
    ],
}
[]
