crates/pcb-star-core/tests/snapshots/input__interface_template_property_inheritance.snap
---
source: projects/cli/crates/diode_star_core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
    children: [
        FrozenValue(
            Component {
                name: "CPU",
                type: "processor",
                footprint: "BGA:256",
                prefix: "U",
                pins: {
                    "CLK": FrozenValue(
                        "1",
                    ),
                    "DATA": FrozenValue(
                        "2",
                    ),
                    "VALID": FrozenValue(
                        "3",
                    ),
                },
                connections: {
                    "CLK": FrozenValue(
                        Net {
                            name: "CPU_CLK",
                            id: "<ID>",
                            properties: {
                                "frequency": FrozenValue(
                                    "100MHz",
                                ),
                                "type": FrozenValue(
                                    "clock",
                                ),
                            },
                        },
                    ),
                    "DATA": FrozenValue(
                        Net {
                            name: "CPU_DATA",
                            id: "<ID>",
                            properties: {
                                "direction": FrozenValue(
                                    "bidirectional",
                                ),
                                "width": FrozenValue(
                                    "8",
                                ),
                            },
                        },
                    ),
                    "VALID": FrozenValue(
                        Net {
                            name: "CPU_VALID",
                            id: "<ID>",
                            properties: {
                                "active": FrozenValue(
                                    "high",
                                ),
                            },
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
        FrozenValue(
            Component {
                name: "MEM",
                type: "memory",
                footprint: "TSOP:48",
                prefix: "U",
                pins: {
                    "CLK": FrozenValue(
                        "1",
                    ),
                    "DATA": FrozenValue(
                        "2",
                    ),
                    "VALID": FrozenValue(
                        "3",
                    ),
                },
                connections: {
                    "CLK": FrozenValue(
                        Net {
                            name: "MEM_CLK",
                            id: "<ID>",
                            properties: {
                                "frequency": FrozenValue(
                                    "100MHz",
                                ),
                                "type": FrozenValue(
                                    "clock",
                                ),
                            },
                        },
                    ),
                    "DATA": FrozenValue(
                        Net {
                            name: "MEM_DATA",
                            id: "<ID>",
                            properties: {
                                "direction": FrozenValue(
                                    "bidirectional",
                                ),
                                "width": FrozenValue(
                                    "8",
                                ),
                            },
                        },
                    ),
                    "VALID": FrozenValue(
                        Net {
                            name: "MEM_VALID",
                            id: "<ID>",
                            properties: {
                                "active": FrozenValue(
                                    "high",
                                ),
                            },
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
    ],
}
[]
